# typa

./: Cargo.toml  README.md
src/: app.rs  config.rs  discord.rs  history.rs  main.rs  models.rs  ui.rs
src/generator/: formatting.rs  generator.rs  punctuation.rs  word_controller.rs
src/history/: cache.rs  draw.rs  history.rs  mod.rs  stats.rs
src/ui/: mod.rs  results.rs  test.rs  utils.rs
src/utils/: strings.rs
