[package]
name = "typa"
description = "A minimal, terminal-based typing speed test written in Rust."
version = "0.3.0"
edition = "2021"
readme = "README.md"
license = "GPL-3.0"
repository = "https://github.com/uint82/typa.git"
homepage = "https://github.com/uint82/typa"
authors = ["Hilmi Abroor <abroorhilmi@gmail.com>"]
keywords = ["typing", "cli", "game", "terminal"]
include = ["src/**/*", "resources/**/*", "README.md", "LICENSE"]

[dependencies]
anyhow = "1.0.100"
rust-embed = "8.5"
chrono = "0.4.43"
clap = { version = "4.5.57", features = ["derive", "cargo"] }
crossterm = "0.29.0"
rand = "0.9.2"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
textwrap = "0.16.2"
config = "0.14"
directories = "5.0"
